commit final for MyCaptain

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DemoCalculator</string>
+    <string name="Xy">X<sup><small>y</small></sup></string>
 </resources>
