--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,34 @@
 <resources>
     <string name="app_name">DemoCalculator</string>
     <string name="Xy">X<sup><small>y</small></sup></string>
+    <string name="_10_10">10+10</string>
+    <string name="_20">20</string>
+    <string name="log">log</string>
+    <string name="ln">ln</string>
+    <string name="LBracket">(</string>
+    <string name="RBracket">)</string>
+    <string name="sin">sin</string>
+    <string name="cos">cos</string>
+    <string name="tan">tan</string>
+    <string name="u03c0">π</string>
+    <string name="ac">AC</string>
+    <string name="percent">%</string>
+    <string name="divide">/</string>
+    <string name="_7">7</string>
+    <string name="_8">8</string>
+    <string name="_9">9</string>
+    <string name="x">X</string>
+    <string name="_4">4</string>
+    <string name="_5">5</string>
+    <string name="_6">6</string>
+    <string name="subraction">-</string>
+    <string name="_1">1</string>
+    <string name="_3">3</string>
+    <string name="_2">2</string>
+    <string name="Addition">+</string>
+    <string name="_0">0</string>
+    <string name="decimal">.</string>
+    <string name="equal">=</string>
+    <string name="e">e</string>
+    <string name="DegOrRad">deg</string>
 </resources>
